--- a/index.html
+++ b/index.html
@@ -98,103 +98,11 @@
                     <img class="" src="images/SVG/carniumC.svg" alt="logo C de carnium">
                     <h3> CARNIUM </h3>
                     <h4>GRILL <span>&</span> BAR</h4>
-                    <a href="#"  title="Commande"> <span id="commandeLink">COMMANDEZ</span></a>
+                    <a href="pages/contact.php"  title="Reserver"> <span id="commandeLink">Reserver</span></a>
                 </div>
             </div>
             <div class="background">
                 <div class="container_first">
-                    <div id="menu">
-                        <h2 class="h2NotreFormule">
-                            <hr>
-                            NOTRE FORMULE
-                            <hr>
-                        </h2>
-                        <div class="formule_container1">
-                            <div>
-                                <img class="image_plat" src="images/SVG/plat.svg" alt="plat PNG">
-                            </div>
-                            <div>
-                                <h3>
-                                    Plat
-                                </h3>
-                                <p>
-                                    accompagnement
-                                </p>
-                            </div>
-                            <div class="prix_menu1">
-                                <p>
-                                    9.90
-                                </p>
-                            </div>
-                        </div>
-                        <div class="formule_container2">
-                             <div>
-                                <img class="image_plat" src="images/SVG/platBoisson.svg" alt="plat PNG">
-                            </div>
-                            <div>
-                                <h3>
-                                    Plat
-                                </h3>
-                                <p>
-                                    accompagnement
-                                </p>
-                                <img src="/images/SVG/plus.svg"  class='imagePlus'alt="logo Plus">
-                                <p>
-                                    boisson
-                                </p>
-                            </div>
-                            <div class="prix_menu2">
-                                <p>
-                                    11.40
-                                </p>
-                            </div>
-                        </div>
-                        <div class="formule_container3">
-                            <div>
-                                <img class="image_plat" src="images/SVG/platBoissonDesert.svg" alt="plat PNG">
-                            </div>
-                            <div>
-                                <h3>
-                                    Plat
-                                </h3>
-                                <p>
-                                    accompagnement
-                                </p>
-                                   <img src="/images/SVG/plus.svg" class="imagePlus" alt="logo Plus">
-
-                                <p>
-                                    boisson
-                                </p>
-                                   <img src="/images/SVG/plus.svg" class='imagePlus' alt="logo Plus">
-
-                                <p>
-                                    dessert
-                                </p>
-                            </div>
-                            <div class="prix_menu3">
-                                <p>
-                                    12.90
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="livraison">
-                        <h2 class="h2Livraison">
-                            <hr>
-                            Commande 
-                            <hr>
-                        </h2>
-                        <div class="livraisonImage">
-                            <img src="images/uber-eats-logo.png" alt="Logo de Uber Eats">
-                        </div>
-                        <div class="linkUber">
-                            <a href="#">ALLER SUR UBER EAT</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="background2">
-                <div class="container_second">
                     <div id="notreConcept">
                         <h2 class="h2Concept">
                             <hr>
@@ -220,6 +128,90 @@
                                    <span> Midi : Restauration « fast good » avec des formules individuelles, commande au comptoir et service à table.</span></br>
                                    <span> Soir : En plus de l’offre du midi, des formules à partager et commande et service à table.</span></br>
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="background2">
+                <div class="container_second">
+                    <div id="faq">
+                        <h2 class="h2faq">
+                            <hr>
+                            FAQ
+                            <hr>
+                        </h2>
+                        <main>
+                        <ul>
+                            <li>
+                                <h3>Le concept est sympa, mais votre viande est uniquement servie sur planche ? 
+                                </h3>
+                                <div>
+                                    <p>
+                                        Nous proposons également un format « sandwich », avec supplément. Votre plat est servi dans un pain artisanal préparé par notre artisan-boulanger, une Ciabatta à l’huile d’olive et aux herbes de Provence. 
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <h3>Peut-on réserver une table ?</h3>
+                                <div>
+                                    <p>
+                                        Oui, avec plaisir. Nous gérons les réservations pour les services du soir, tout simplement en nous appelant au 01.46.81.58.74.              </p>
+                                </div>
+                            </li>
+                            <li>
+                                <h3>Proposez-vous un service de livraison à domicile ?</h3>
+                                <div>
+                                    <p>
+                                    Nous ne disposons pas encore de notre propre flotte en interne mais notre offre est disponible sur la plateforme Uber-Eat actuellement.              </p>
+                                </div>
+                            </li>
+                            <li>
+                                <h3>Est-il possible de commander à emporter ?
+                                </h3>
+                                <div>
+                                    <p>
+                                        Notre équipe aura le plaisir de prendre votre commande par téléphone. Un service de « Click & Collect » sera bientôt disponible sur notre site internet pour faciliter votre commander et fluidifier le passage en caisse.               </p>
+                                </div>
+                            </li>
+                            <li>
+                                <h3>Quelles boissons accompagnent vos viandes ?
+                                </h3>
+                                <div>
+                                    <p>
+                                        Nous proposons du Soft (citronnade maison, jus, soda…), du café torréfié à paris, une belle sélection de vins qui se marient parfaitement avec chaque viande, des bières artisanales en pression et à la bouteille (Gallia brassée à Pantin), des cocktails maison…              </p>
+                                </div>
+                            </li>
+                            <li>
+                                <h3>Et si je suis végétarien(ne)  ? 
+                                </h3>
+                                <div>
+                                    <p>
+                                        Dont worry, nous pensons également à vous. Nous proposons une option végétarienne : Des légumes du moment, marinés, des fois précuits au four et bien-sûr grillés à la flamme.              </p>
+                                </div>
+                            </li>
+                            <li>
+                                <h3>Et sinon, vous recrutez ?
+                                </h3>
+                                <div>
+                                <p>
+                                    Vous pouvez adresser votre CV à : recrutement@carnium.fr
+                                </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </main>
+                    </div>
+                    <div id="livraison">
+                        <h2 class="h2Livraison">
+                            <hr>
+                            Commande 
+                            <hr>
+                        </h2>
+                        <div class="livraisonImage">
+                            <img src="images/uber-eats-logo.png" alt="Logo de Uber Eats">
+                        </div>
+                        <div class="linkUber">
+                            <a href="#">ALLER SUR UBER EAT</a>
                         </div>
                     </div>
                 </div>
@@ -254,78 +246,12 @@
                                 Mail : carnium@restautant.com
                             </p>
                             <p>
-                                Tél : 01 46 81 58 74
+                                    Tél : 01 46 81 58 74
                             </p>
                         </div>
                     </div>
                 </div>
           </div>
-          <div id="faq">
-            <h2 class="h2faq">
-                <hr>
-                FAQ
-                <hr>
-            </h2>
-          <main>
-            <ul>
-              <li>
-                <h3>Le concept est sympa, mais votre viande est uniquement servie sur planche ? 
-                </h3>
-                <div>
-                  <p>
-                        Nous proposons également un format « sandwich », avec supplément. Votre plat est servi dans un pain artisanal préparé par notre artisan-boulanger, une Ciabatta à l’huile d’olive et aux herbes de Provence. 
-                  </p>
-                </div>
-              </li>
-              <li>
-                <h3>Peut-on réserver une table ?</h3>
-                <div>
-                  <p>
-                        Oui, avec plaisir. Nous gérons les réservations pour les services du soir, tout simplement en nous appelant au 01.46.81.58.74.              </p>
-                </div>
-              </li>
-              <li>
-                <h3>Proposez-vous un service de livraison à domicile ?</h3>
-                <div>
-                  <p>
-                    Nous ne disposons pas encore de notre propre flotte en interne mais notre offre est disponible sur la plateforme Uber-Eat actuellement.              </p>
-                </div>
-              </li>
-              <li>
-                <h3>Est-il possible de commander à emporter ?
-                </h3>
-                <div>
-                  <p>
-                        Notre équipe aura le plaisir de prendre votre commande par téléphone. Un service de « Click & Collect » sera bientôt disponible sur notre site internet pour faciliter votre commander et fluidifier le passage en caisse.               </p>
-                </div>
-              </li>
-              <li>
-                <h3>Quelles boissons accompagnent vos viandes ?
-                    </h3>
-                <div>
-                  <p>
-                        Nous proposons du Soft (citronnade maison, jus, soda…), du café torréfié à paris, une belle sélection de vins qui se marient parfaitement avec chaque viande, des bières artisanales en pression et à la bouteille (Gallia brassée à Pantin), des cocktails maison…              </p>
-                </div>
-              </li>
-              <li>
-                <h3>Et si je suis végétarien(ne)  ?                </h3>
-                <div>
-                  <p>
-                        Dont worry, nous pensons également à vous. Nous proposons une option végétarienne : Des légumes du moment, mariné, des fois précuits au four et bien-sûr grillés à la flamme.              </p>
-                </div>
-              </li>
-              <li>
-                <h3>Et sinon, vous recrutez ?
-                    </h3>
-                <div>
-                  <p>
-                        Vous pouvez adresser votre CV à : recrutement@carnium.fr
-                    </p>
-                </div>
-              </li>
-            </ul>
-          </main>
-        </div>
         <footer>
             <div class="PageDown">
               <div class="info">
@@ -349,6 +275,16 @@
                 <p>Suivez l'actualité de votre restaurant CARNIUM</p>
                 <a href="https://www.facebook.com/Carnium.grillbar/" target="_blank"><img src="images/SVG/facebook-logo.svg" alt="logo FaceBook"></a>
                 <a href="https://www.instagram.com/carnium.grillbar/" target="_blank"><img src="images/SVG/instagram.svg" alt="logo Instagram"></a>
+
+                <p>Le Lundi :
+                     <p>12h00-14h30</p>
+                </p>
+                <p>Du Mardi au Samedi :
+                    <p>12h00-14h30</p>
+                    <p>18h30-22h00</p>
+                </p>
+                <p>Fermé le Dimanche
+                </p>
               </div>
               <div class="lineH">
             </div>
